# voctra

./: .env  .gitignore  Cargo.toml  Vagrantfile  build.rs  stage.sh  voctra.conf  voctra.toml
client/: package.json  tsconfig.json  tslint.json  webpack.config.js
client/public/: index.html
client/public/locales/en/: common.json  translation.json
client/public/locales/nl/: translation.json
client/src/: actions.ts  i18n.tsx  index.scss  index.tsx  state.ts  util.ts
client/src/actions/: index.ts
client/src/components/: App.tsx  Content.tsx  Login.tsx  LoginPanel.tsx  Navigator.tsx  Root.tsx  Trainer.tsx  Vocabulary.tsx  VocabularyViewer.tsx
client/src/containers/: LoginManager.tsx  Root.tsx  VocabularyLoader.tsx
client/src/messages/: en.json  nl.json
client/src/reducers/: index.ts
client/src/translations/: en-US.json  en.json  nl-NL.json  nl.json
client/static/: index.html
client/static/locales/en/: common.json  lang.json
client/static/locales/nl/: common.json  lang.json
client/static/vocab/basic/: vocabulary.json
client/static/vocab/example/: vocabulary.json
debian/: changelog  control  copyright  rules  voctra.dirs  voctra.install  voctra.logrotate  voctra.postinst  voctra.postrm  voctra.service
debian/conf/: voctra.conf  voctra.toml
migrations/20170608221833_create_users/: up.sql
src/: api.rs  error.rs  json.rs  lib.rs  logging.rs  main.rs  secret.rs  session.rs  settings.rs  static.rs
src/db/: mod.rs  schema.rs  users.rs
staging/: nginx.conf  provision.sh  voctra.dev
